--- a/ass2.tex
+++ b/ass2.tex
@@ -255,7 +255,7 @@ for $x \in \Ft$, $x^2+1\neq 0$.
     of $G$ given by 
     \begin{equation*}
         \rho(\sigma) = \begin{pmatrix} 1 & 0 & 0\\ 
-            0 & 0 & 1\\
+            0 & 0 & -11\\
             -1 & 1 & 0
         \end{pmatrix}
     \end{equation*}
@@ -355,7 +355,39 @@ for $x \in \Ft$, $x^2+1\neq 0$.
     \end{equation*}
 \end{corollary}
 \begin{proof}
+    $\ker (\rho(\sigma)-I)$ is simply
+    \begin{equation*}
+        \ker\begin{pmatrix}
+            0 & 0 & 0\\
+            0 & -1 & -1\\
+            -1 & 1 & -1
+        \end{pmatrix} = 0.
+    \end{equation*}
     
+    Similarly, $\ker(\rho(\sigma)+I)$ is
+    \begin{equation*}
+        \ker\begin{pmatrix}
+            -1 & 0 & 0\\
+            0 & 1 & -1\\
+            -1 & 1 & 1
+        \end{pmatrix} = \Ft\begin{pmatrix}
+                -1 \\1 \\-1
+        \end{pmatrix}
+    \end{equation*}
+    And $\ker(\rho(\sigma)^2+I)$ is
+    \begin{equation*}
+        \ker\begin{pmatrix}
+            -1 & 0 & 0\\
+            1 & 0 & 0\\
+            -1 & 0 & 0
+        \end{pmatrix}
+        = \Ft\begin{pmatrix}
+            0\\0\\1
+        \end{pmatrix}\oplus
+        \begin{pmatrix}
+            0\\1\\0
+        \end{pmatrix}       
+    \end{equation*}
 \end{proof}
 
 \section*{Question 3}
