Finally finished ass2

--- a/ass2.tex
+++ b/ass2.tex
@@ -350,8 +350,8 @@ for $x \in \Ft$, $x^2+1\neq 0$.
     Hence the isotypic components of $V$ are
     \begin{equation*}
         \Ft\begin{pmatrix}
-        
-        \end{pmatrix},\;\;\Ft\begin{pmatrix}  \end{pmatrix}\oplus\Ft\begin{pmatrix} \end{pmatrix},\;\;0.
+            -1\\1\\-1
+        \end{pmatrix},\;\;\Ft\begin{pmatrix}0\\1\\0  \end{pmatrix}\oplus\Ft\begin{pmatrix} 0\\0\\1\end{pmatrix},\;\;0.
     \end{equation*}
 \end{corollary}
 \begin{proof}
